--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PharmaConnect – Bridging Investors & Pharmacists</title>
-  <!-- Stylesheet -->
+  
   <link rel="stylesheet" href="style.css">
-  <!-- Font Awesome for icons -->
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pbV0PfDOdvr0XY+TAWjT9E6gwsxnA0/EtoGcOms5R4Uav5KQLUWOnVyMVHcG2X/+srV9pKKt4Lk+g8j6+0PSFg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Three.js and GSAP libraries -->
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -51,7 +51,7 @@
         community‑focused business.
       </p>
       <p>
-        Inspired by modern eCommerce solutions like Dukaan, PharmaConnect lets you
+        PharmaConnect lets you
         connect with partners quickly and provides tools for analytics,
         product management and secure transactions. Whether you’re an investor
         seeking a reliable venture or a pharmacist in need of funding, our platform
